syntax = "proto3";
package tag.v1;

import "google/protobuf/struct.proto";
import "tagger/tagger.proto";
import "time/v1/time.proto";

option go_package = "github.com/core-pb/tag/tag/v1;tag";

message Relation {
    fixed64                module_id   = 1 [(tagger.tags) = "bun:\",pk\""];
    fixed64                external_id = 2 [(tagger.tags) = "bun:\",pk\""];
    fixed64                tag_id      = 3 [(tagger.tags) = "bun:\",pk\""];
    fixed64                source_id   = 4;
    google.protobuf.Struct data        = 5 [(tagger.tags) = "bun:\"type:jsonb\""];

    time.v1.Time created_at = 14 [(tagger.tags) = "bun:\"type:timestamptz\""];
    time.v1.Time updated_at = 15 [(tagger.tags) = "bun:\"type:timestamptz\""];
}
